add defaultPage + frontpage accueil (juste ajouter barre de connexion) + creation fichier dans website

--- a/website/test.html
+++ b/website/test.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="../css/article.css" />
-        <title>{{title}}</title>
+        <title>test</title>
     </head>
 
     <body>
         <div class="content">
-            <header>{{header}}</header>	
-			<h1>{{title}}</h1>
+            <header><header>test</header></header>	
+			<h1>test</h1>
 			
             <section>
                 <article>
-                    <img src="{{imgLink}}" alt="" />
-                    <p>{{content}}</p>
+                    <img src="./img/1a30abd5d3ade88cd3528d11e6abb1835c6e5af9.jpg" alt="" />
+                    <p>contenu</p>
                 </article>
             </section>
             
-            <footer>{{footer}}</footer>
+            <footer><header>Footer</header></footer>
         </div>
     </body>
 </html>
